# conan-mscl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bintray.py  buildPackages.bat  buildPackages.sh  conandata.yml  conanfile.py  version.txt
.github/workflows/: ci-conan-apple-clang.yml  ci-conan-clang.yml  ci-conan-gcc.yml  ci-conan-msvc.yml  ci-conan-windows.yml  ci-conan.yml
cmake/: MSCLConfig.cmake.in
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: getCurrentConfig.h  main.cpp
